<resources>
    <string name="app_name">Pizzaria do Zé!</string>


    <string name="novoPedido">Novo Pedido</string>
    <string name="cadProduto">Cadastrar Produto</string>
    <string name="listProduto">Produtos</string>
    <string name="listUsuario">Usuários</string>
    <string name="cadUsuario">Cadastrar Usuário</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_cad_produto">Cadastrar Produtos</string>
    <string name="title_activity_cad_usuario">Cadastrar Usuário</string>
    <string name="title_activity_novo_pedido">Novo Pedido</string>
    <string name="title_activity_list_produto">Produtos</string>
    <string name="title_activity_list_pedidos">Pedidos</string>

    <string name="cadProduto_descricao">Descrição</string>
    <string name="cadProduto_precoCusto">Preço Custo</string>
    <string name="cadProduto_precoVenda">Preço Venda</string>
    <string name="cadProduto_tpProduto">Selecione o Tipo de Produto</string>
    <string name="cadProduto_tpPizza">Pizza</string>
    <string name="cadProduto_tpBebida">Bebidas</string>
    <string name="cadProduto_tpOutro">Outros</string>
    <string name="cadProduto_salvar">Salvar</string>
    <string name="cadProduto_limpar">Limpar</string>
    <string name="cadProduto_cancelar">Cancelar</string>

    <string name="cadUsuario_nomeCompleto">Nome Completo</string>
    <string name="cadUsuario_email">Email</string>
    <string name="cadUsuario_numContato">Número de Contato</string>
    <string name="cadUsuario_funcao">Função</string>
    <string name="cadUsuario_funcaoGerente">Gerente</string>
    <string name="cadUsuario_funcaoGarcom">Garçom</string>

    <string name="listProduto_descricao">Descrição: </string>
    <string name="listProduto_preco_venda">Preço de Venda: </string>
    <string name="listProduto_preco_custo">Preço de Custo: </string>

    <string name="listUsuario_nome">Nome: </string>
    <string name="listUsuario_email">Email: </string>
    <string name="listUsuario_telefone">Telefone: </string>
    <string name="listUsuario_funcao">Função: </string>

    <string name="listPedido_id">Código Pedido: </string>
    <string name="listNome_usuario">Nome do Usuário: </string>
    <string name="listPedido_itens">Itens: </string>
    <string name="listPedido_tipoPagamento">Condição de Pagamento: </string>
    <string name="listPedido_teleEntrega">Tele Entrega: </string>

    <string name="novoPedido_usuario">Selecione o Usuário</string>
    <string name="novoPedido_produto">Selecione o Item</string>
    <string name="novoPedido_formaPagamento">Selecione a forma de pagamento:</string>
    <string name="novoPedido_tpDinheiro">Dinheiro</string>
    <string name="novoPedido_tpCartao">Cartão</string>
    <string name="novoPedido_realizarEntrega">Realizar entrega:</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

</resources>