<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pedido.novoPedidoActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App_pizzaria.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.App_pizzaria.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textUsuarioPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/novoPedido_usuario" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:id="@+id/spinnerUsuario"></Spinner>


    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/novoPedido_produto" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/spinnerItem"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/novoPedido_formaPagamento" />

        <RadioGroup
            android:id="@+id/formaPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text"
            android:layout_marginLeft="15dp"
            android:checkedButton="@+id/sound">

            <RadioButton
                android:id="@+id/pagDinheiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novoPedido_tpDinheiro" />

            <RadioButton
                android:id="@+id/pagCartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novoPedido_tpCartao" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/novoPedido_realizarEntrega" />

        <RadioGroup
            android:id="@+id/realizarEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text"
            android:layout_marginLeft="15dp"
            android:checkedButton="@+id/sound">

            <RadioButton
                android:id="@+id/entregaSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/entregaNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao" />

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/listaItens"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"></ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/cadProduto_salvar"></Button>

        <Button
            android:id="@+id/btLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/cadProduto_limpar"></Button>

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/cadProduto_cancelar"></Button>
    </LinearLayout>

</LinearLayout>