<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".produto.cadProdutoActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App_pizzaria.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.App_pizzaria.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/cadProduto_descricao" />

        <EditText
            android:id="@+id/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:width="300dp"
            android:inputType="text"></EditText>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/cadProduto_precoVenda" />

        <EditText
            android:id="@+id/precoVenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:width="300dp"
            android:inputType="numberDecimal"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/cadProduto_precoCusto" />

        <EditText
            android:id="@+id/precoCusto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:width="300dp"
            android:inputType="numberDecimal"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/cadProduto_tpProduto" />

        <RadioGroup
            android:id="@+id/tipoPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginLeft="15dp"
            android:checkedButton="@+id/sound">

            <RadioButton
                android:id="@+id/tipoProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadProduto_tpPizza" />

            <RadioButton
                android:id="@+id/tpBebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadProduto_tpBebida" />

            <RadioButton
                android:id="@+id/tpOutro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadProduto_tpOutro" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/cadProduto_salvar"></Button>

        <Button
            android:id="@+id/btLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/cadProduto_limpar"></Button>

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:text="@string/cadProduto_cancelar"></Button>
    </LinearLayout>


</LinearLayout>