<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pizzaria">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App_pizzaria.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#817dff"
            app:popupTheme="@style/Theme.App_pizzaria.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center">

    <Button
        android:id="@+id/button_novoPedido"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:background="#a1ede1"
        android:textColor="#3abaa5"
        android:onClick="onClick"
        android:text="@string/novoPedido" />

    <Button
        android:id="@+id/button_listPedido"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="#8cd9f5"
        android:textColor="#3abaa5"
        android:onClick="onClick"
        android:text="@string/title_activity_list_pedidos" />

    <Button
        android:id="@+id/button_listProduto"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="#95d1f0"
        android:textColor="#3abaa5"
        android:onClick="onClick"
        android:text="@string/listProduto" />

    <Button
        android:id="@+id/button_listUsuario"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="#95d1f0"
        android:textColor="#3abaa5"
        android:onClick="onClick"
        android:text="@string/listUsuario" />

    <Button
        android:id="@+id/button_cadProduto"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="#f2948f"
        android:textColor="#3abaa5"
        android:onClick="onClick"
        android:text="@string/cadProduto"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_cadUsuario"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="#8cd9f5"
        android:textColor="#3abaa5"
        android:onClick="onClick"
        android:text="@string/cadUsuario" />

</LinearLayout>






</androidx.coordinatorlayout.widget.CoordinatorLayout>