<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listUsuario_nome"></TextView>

            <TextView
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listUsuario_email"></TextView>
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listUsuario_telefone"></TextView>
            <TextView
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listUsuario_funcao"></TextView>
            <TextView
                android:id="@+id/funcao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <ImageButton
            android:id="@+id/editar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_edit"
            android:tint="@color/yellow"
            android:backgroundTint="@color/white">
        </ImageButton>
        <ImageButton
            android:id="@+id/excluir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_delete"
            android:backgroundTint="@color/white">
        </ImageButton>
    </LinearLayout>
</LinearLayout>